# pdm-manage-version

./: .editorconfig  .gitignore  README.md  pyproject.toml
