[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "pdm>=2.5.2",
]

[project]
name = "pdm-manage-version"
version = "0.0.1"
description = "`pdm version` working like `poetry version`"
authors = [
    {name = "Marco Acierno", email = "marcoaciernoemail@gmail.com"},
]
dependencies = [
    "packaging>=23.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.entry-points.pdm]
version = "plugin:version"
